objectbox/lib/src/bindings/objectbox-c.dart


  /// /// Put asynchronously using the given mode.
  int async_put5(
    ffi.Pointer<OBX_async> async_1,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
    int mode,
  ) {
    _async_put5 ??= _dylib
        .lookupFunction<_c_async_put5, _dart_async_put5>('obx_async_put5');
    return _async_put5(
      async_1,
      id,
      data,
      size,
      mode,
    );
  }

  _dart_async_put5 _async_put5;

  /// /// Put asynchronously with inserts semantics (won't put if object already exists).
  int async_insert(
    ffi.Pointer<OBX_async> async_1,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _async_insert ??=
        _dylib.lookupFunction<_c_async_insert, _dart_async_insert>(
            'obx_async_insert');
    return _async_insert(
      async_1,
      id,
      data,
      size,
    );
  }

  _dart_async_insert _async_insert;

  /// /// Put asynchronously with update semantics (won't put if object is not yet present).
  int async_update(
    ffi.Pointer<OBX_async> async_1,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _async_update ??=
        _dylib.lookupFunction<_c_async_update, _dart_async_update>(
            'obx_async_update');
    return _async_update(
      async_1,
      id,
      data,
      size,
    );
  }

  _dart_async_update _async_update;

  /// /// Reserve an ID, which is returned immediately for future reference, and put asynchronously.
  /// /// Note: of course, it can NOT be guaranteed that the entity will actually be put successfully in the DB.
  /// /// @param data the given bytes are mutated to update the contained ID data.
  int async_put_object(
    ffi.Pointer<OBX_async> async_1,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _async_put_object ??=
        _dylib.lookupFunction<_c_async_put_object, _dart_async_put_object>(
            'obx_async_put_object');
    return _async_put_object(
      async_1,
      data,
      size,
    );
  }

  _dart_async_put_object _async_put_object;

  /// /// Reserve an ID, which is returned immediately for future reference, and insert asynchronously.
  /// /// Note: of course, it can NOT be guaranteed that the entity will actually be inserted successfully in the DB.
  /// /// @param data the given bytes are mutated to update the contained ID data.
  int async_insert_object(
    ffi.Pointer<OBX_async> async_1,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _async_insert_object ??= _dylib.lookupFunction<_c_async_insert_object,
        _dart_async_insert_object>('obx_async_insert_object');
    return _async_insert_object(
      async_1,
      data,
      size,
    );
  }

  _dart_async_insert_object _async_insert_object;

  /// /// Remove asynchronously.
  int async_remove(
    ffi.Pointer<OBX_async> async_1,
    int id,
  ) {
    _async_remove ??=
        _dylib.lookupFunction<_c_async_remove, _dart_async_remove>(
            'obx_async_remove');
    return _async_remove(
      async_1,
      id,
    );
  }

  _dart_async_remove _async_remove;

  /// /// Create a custom OBX_async instance that has to be closed using obx_async_close().
  /// /// Note: for standard tasks, prefer obx_box_async() giving you a shared instance that does not have to be closed.
  ffi.Pointer<OBX_async> async_create(
    ffi.Pointer<OBX_box> box,
    int enqueue_timeout_millis,
  ) {
    _async_create ??=
        _dylib.lookupFunction<_c_async_create, _dart_async_create>(
            'obx_async_create');
    return _async_create(
      box,
      enqueue_timeout_millis,
    );
  }

  _dart_async_create _async_create;

  /// /// Close a custom OBX_async instance created with obx_async_create().
  /// /// @return OBX_ERROR_ILLEGAL_ARGUMENT if you pass the shared instance from obx_box_async()
  int async_close(
    ffi.Pointer<OBX_async> async_1,
  ) {
    _async_close ??= _dylib
        .lookupFunction<_c_async_close, _dart_async_close>('obx_async_close');
    return _async_close(
      async_1,
    );
  }

  _dart_async_close _async_close;

  /// /// Create a query builder which is used to collect conditions using the obx_qb_* functions.
  /// /// Once all conditions are applied, use obx_query() to build a OBX_query that is used to actually retrieve data.
  /// /// Use obx_qb_close() to close (free) the query builder.
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_query_builder> query_builder(
    ffi.Pointer<OBX_store> store,
    int entity_id,
  ) {
    _query_builder ??=
        _dylib.lookupFunction<_c_query_builder, _dart_query_builder>(
            'obx_query_builder');
    return _query_builder(
      store,
      entity_id,
    );
  }

  _dart_query_builder _query_builder;

  /// /// Close the query builder; note that OBX_query objects outlive their builder and thus are not affected by this call.
  /// /// @param builder may be NULL
  int qb_close(
    ffi.Pointer<OBX_query_builder> builder,
  ) {
    _qb_close ??=
        _dylib.lookupFunction<_c_qb_close, _dart_qb_close>('obx_qb_close');
    return _qb_close(
      builder,
    );
  }

  _dart_qb_close _qb_close;

  /// /// To minimise the amount of error handling code required when building a query, the first error is stored in the query
  /// /// and can be obtained here. All the obx_qb_XXX functions are null operations after the first query error has occurred.
  int qb_error_code(
    ffi.Pointer<OBX_query_builder> builder,
  ) {
    _qb_error_code ??=
        _dylib.lookupFunction<_c_qb_error_code, _dart_qb_error_code>(
            'obx_qb_error_code');
    return _qb_error_code(
      builder,
    );
  }

  _dart_qb_error_code _qb_error_code;

  /// /// To minimise the amount of error handling code required when building a query, the first error is stored in the query
  /// /// and can be obtained here. All the obx_qb_XXX functions are null operations after the first query error has occurred.
  ffi.Pointer<ffi.Int8> qb_error_message(
    ffi.Pointer<OBX_query_builder> builder,
  ) {
    _qb_error_message ??=
        _dylib.lookupFunction<_c_qb_error_message, _dart_qb_error_message>(
            'obx_qb_error_message');
    return _qb_error_message(
      builder,
    );
  }

  _dart_qb_error_message _qb_error_message;

  /// /// Add null check to the query
  int qb_null(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
  ) {
    _qb_null ??=
        _dylib.lookupFunction<_c_qb_null, _dart_qb_null>('obx_qb_null');
    return _qb_null(
      builder,
      property_id,
    );
  }

  _dart_qb_null _qb_null;

  /// /// Add not-null check to the query
  int qb_not_null(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
  ) {
    _qb_not_null ??= _dylib
        .lookupFunction<_c_qb_not_null, _dart_qb_not_null>('obx_qb_not_null');
    return _qb_not_null(
      builder,
      property_id,
    );
  }

  _dart_qb_not_null _qb_not_null;

  int qb_equals_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_equals_string ??=
        _dylib.lookupFunction<_c_qb_equals_string, _dart_qb_equals_string>(
            'obx_qb_equals_string');
    return _qb_equals_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_equals_string _qb_equals_string;

  int qb_not_equals_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_not_equals_string ??= _dylib.lookupFunction<_c_qb_not_equals_string,
        _dart_qb_not_equals_string>('obx_qb_not_equals_string');
    return _qb_not_equals_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_not_equals_string _qb_not_equals_string;

  int qb_contains_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_contains_string ??=
        _dylib.lookupFunction<_c_qb_contains_string, _dart_qb_contains_string>(
            'obx_qb_contains_string');
    return _qb_contains_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_contains_string _qb_contains_string;

  int qb_starts_with_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_starts_with_string ??= _dylib.lookupFunction<_c_qb_starts_with_string,
        _dart_qb_starts_with_string>('obx_qb_starts_with_string');
    return _qb_starts_with_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_starts_with_string _qb_starts_with_string;

  int qb_ends_with_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_ends_with_string ??= _dylib.lookupFunction<_c_qb_ends_with_string,
        _dart_qb_ends_with_string>('obx_qb_ends_with_string');
    return _qb_ends_with_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_ends_with_string _qb_ends_with_string;

  int qb_greater_than_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_greater_than_string ??= _dylib.lookupFunction<_c_qb_greater_than_string,
        _dart_qb_greater_than_string>('obx_qb_greater_than_string');
    return _qb_greater_than_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_greater_than_string _qb_greater_than_string;

  int qb_greater_or_equal_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_greater_or_equal_string ??= _dylib.lookupFunction<
        _c_qb_greater_or_equal_string,
        _dart_qb_greater_or_equal_string>('obx_qb_greater_or_equal_string');
    return _qb_greater_or_equal_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_greater_or_equal_string _qb_greater_or_equal_string;

  int qb_less_than_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_less_than_string ??= _dylib.lookupFunction<_c_qb_less_than_string,
        _dart_qb_less_than_string>('obx_qb_less_than_string');
    return _qb_less_than_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_less_than_string _qb_less_than_string;

  int qb_less_or_equal_string(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Int8> value,
    bool case_sensitive,
  ) {
    _qb_less_or_equal_string ??= _dylib.lookupFunction<
        _c_qb_less_or_equal_string,
        _dart_qb_less_or_equal_string>('obx_qb_less_or_equal_string');
    return _qb_less_or_equal_string(
      builder,
      property_id,
      value,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_less_or_equal_string _qb_less_or_equal_string;

  /// /// Note that all string values are copied and thus do not need to be maintained by the calling code.
  int qb_in_strings(
    ffi.Pointer<OBX_query_builder> builder,
    int property_id,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> values,
    int count,
    bool case_sensitive,
  ) {
    _qb_in_strings ??=
        _dylib.lookupFunction<_c_qb_in_strings, _dart_qb_in_strings>(
            'obx_qb_in_strings');
    return _qb_in_strings(
      builder,
      property_id,
      values,
      count,
      case_sensitive ? 1 : 0,
    );
  }

  _dart_qb_in_strings _qb_in_strings;
